# Face-detection-and-recognition_Task5

./: CMakeLists.txt  README.md
backend/include/: face_detector.h  image_utils.h  pca_engine.h  roc_plotter.h
backend/src/: cv_backend_module.cpp  face_detector.cpp  image_utils.cpp  pca_engine.cpp  roc_plotter.cpp
frontend/: main.py
frontend/ui/: theme.qss
pipeline/: app_orchestrator.py  detection_tab.py  eigenfaces_tab.py  recognition_tab.py  ui_utils.py  workers.py
